separate API to get profile and setting data
